feat: adjust cotacao to use viacep and return Endereco
